-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 3.6.1
-
None
-
{noformat}
Ubuntu 15.10 64-bit
Using Creator from https://download.qt.io/snapshots/qtcreator/3.6.1/latest/:
Qt Creator 3.6.1
Based on Qt 5.6.0 (GCC 4.9.1 20140922 (Red Hat 4.9.1-10), 64 bit)
Built on Feb 26 2016 01:06:32
From revision 3b91fb3899
{noformat}
-
66237a6e0401b0638e91c1fe3c8cefa7330db03d (qt-creator/qt-creator/master)
1. Clone https://codereview.qt-project.org/#/admin/projects/qt/qtquickcontrols2
2. Open the top-level qtquickcontrols2.pro file in Creator
3. Add a "make sub-examples" build step (Qt is configured with -nomake examples)
4. Try to build any sub-project (e.g. tests/auto) via the right click context menu in the project tree. You'll get this error:
error: No rule to make target 'sub-examples'. Stop.
This means that you then need to either build that project from the command line or open the project separately (and configure it) just to build it.
Instead, Creator should probably only apply the make steps to the project they're actually defined for: the top-level project. When building a sub-project in this manner, it could just use the default build command for that platform.